// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Destruction Warlock Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Destruction Warlock Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <img
            alt=""
            className="icon"
            src="//render-us.worldofwarcraft.com/icons/56/spell_mage_altertime.jpg"
          />
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Downtime
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Downtime is available time not used to cast anything (including not having your GCD rolling). This can be caused by delays between casting spells, latency, cast interrupting or just simply not casting anything (e.g. due to movement/stunned).<br/>
        <li>You spent <b>89.16%</b> of your time casting something.</li>
        <li>You spent <b>10.84%</b> of your time casting nothing at all.</li>
        "
            >
              10.84 %
            </dfn>
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel-footer"
      style={
        Object {
          "borderTop": 0,
          "overflow": "hidden",
          "padding": 0,
        }
      }
    >
      <div
        className="statistic-bar"
      >
        <div
          className="stat-health-bg"
          data-tip="You spent <b>89.16%</b> of your time casting something."
          style={
            Object {
              "width": "89.15935427051126%",
            }
          }
        >
          <img
            alt="Active time"
            src="/img/sword.png"
          />
        </div>
        <div
          className="remainder DeathKnight-bg"
          data-tip="You spent <b>10.84%</b> of your time casting nothing at all."
        >
          <img
            alt="Downtime"
            src="/img/afk.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ArcaneTorrent matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ArcaneTorrent matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Backdraft matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=117828"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Wasted Backdraft procs
          </div>
          <div
            className="value"
          >
            2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Backdraft matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers BurstingFlare matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers BurstingFlare matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Cataclysm matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Cataclysm matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ChannelDemonfire matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChannelDemonfire matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaosShards matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaosShards matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaoticInferno matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaoticInferno matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Destruction Warlock Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaos matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable item"
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=277644"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_chaosbolt.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            <a
              href="http://wowhead.com/spell=277644"
              rel="noopener noreferrer"
              target="_blank"
            >
               
              Crashing Chaos
            </a>
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Estimated bonus Chaos Bolt damage: 417,984<br />
                  You used 14 out of 16 Crashing Chaos stacks.<br /><br />
                  The damage is an approximation using current Intellect values at given time, but because we might miss some Intellect buffs (e.g. trinkets, traits), the value of current Intellect might be a little incorrect."
            >
              <img
                alt="Damage"
                className="icon"
                src="/img/sword.png"
              />
               
              ≈
              9.44 % / 1,857 DPS
            </dfn>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaos matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaosChaoticInfernoCore matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaosChaoticInfernoCore matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers DamageDone matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <img
            alt="Sword"
            src="/img/sword.png"
            style={
              Object {
                "border": 0,
              }
            }
          />
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Damage done
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Total damage done: <b>4,428,302</b> <br>Contribution from pets: 17.07 % / 3,357 DPS"
            >
              20k DPS
            </dfn>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers DamageDone matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Eradication matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Eradication matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers FireAndBrimstone matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers FireAndBrimstone matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Flashover matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Flashover matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Flashpoint matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Flashpoint matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSacrifice matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSacrifice matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSupremacy matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSupremacy matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Havoc matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=80240"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_baneofhavoc.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Damage cleaved
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="You cleaved 17,629 damage to targets afflicted by your Havoc.<br /><br />
                Note: This number is probably higher than it should be, as it also counts the damage you did directly to the Havoc target (not just the cleaved damage)."
            >
              0.40 % / 78 DPS
            </dfn>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Havoc matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ImmolateUptime matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=157736"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Immolate uptime
          </div>
          <div
            className="value"
          >
            99.25 %
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers ImmolateUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Inferno matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Inferno matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers InternalCombustion matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers InternalCombustion matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RainOfFire matches the statistic snapshot 1`] = `null`;

exports[`The Destruction Warlock Analyzer analyzers RainOfFire matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ReverseEntropy matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers ReverseEntropy matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers RoaringBlaze matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RoaringBlaze matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RollingHavoc matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RollingHavoc matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Shadowburn matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Shadowburn matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulConduit matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulConduit matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulFire matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulFire matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardDetails matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <img
            alt="Wasted Soul Shards"
            src="warlock_soulshard_bw.jpg"
          />
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Wasted Soul Shard Fragments
          </div>
          <div
            className="value"
          >
            2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardDetails matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers SpellUsable matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers SpellUsable matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers TalentStatisticBox matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic-box statistic-list"
  >
    <div
      className="panel-heading"
    >
      <h2>
        Talents
      </h2>
    </div>
    <div
      className="panel-body items"
    >
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=267115"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
             
            Flashover
          </a>
           bonus damage
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            data-tip="88,923 bonus damage"
          >
            2.01 % / 395 DPS
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Bonus 
          <a
            href="http://wowhead.com/spell=117828"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
             
            Backdraft
          </a>
           stacks from 
          <a
            href="http://wowhead.com/spell=267115"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
             
            Flashover
          </a>
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            data-tip="You wasted 0 bonus stacks (Conflagrate on 3 or 4 stacks of Backdraft)."
          >
            26
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=205148"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraftgreen.jpg"
            />
             
            Reverse Entropy
          </a>
           uptime
        </div>
        <div
          className="flex-sub text-right"
        >
          42.84 %
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=152108"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/achievement_zone_cataclysm.jpg"
            />
             
            Cataclysm
          </a>
           damage
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            data-tip="259,814 damage<br />
          Average targets hit: 1.43"
          >
            5.87 % / 1,154 DPS
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Average 
          <a
            href="http://wowhead.com/spell=266086"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/warlock_grimoireofcommand.jpg"
            />
             
            Grimoire of Supremacy
          </a>
           stacks
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            data-tip="Bonus Chaos Bolt damage: 592,738 (13.39 % / 2,633 DPS). Note that due to Destruction Mastery, this is only an <strong>estimate</strong> (not taking Mastery into account)."
          >
            15.00
          </dfn>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers TalentStatisticBox matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer should match the checklist snapshot 1`] = `
<div
  className="checklist"
>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "green",
                }
              }
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M 5.701 23.894 C 4.24 22.837 2.199 23.163 1.141 24.624 C 0.083 26.085 0.411 28.126 1.871 29.184 C 6.96 32.869 11.124 38.618 14.539 46.197 C 15.688 48.746 19.3 48.767 20.478 46.231 C 27.135 31.905 36.787 18.058 48.359 8.153 C 49.728 6.98 49.888 4.919 48.715 3.548 C 47.543 2.178 45.481 2.018 44.111 3.191 C 33.372 12.385 24.283 24.61 17.478 37.569 C 14.203 31.848 10.328 27.245 5.701 23.894 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Use your core spells
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "transition": "background-color 800ms",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Destruction Warlocks have a simple rotation core. Maintain your 
              <a
                href="http://wowhead.com/spell=348"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
                />
                 
                Immolate
              </a>
               on all enemies if possible, don't waste your 
              <a
                href="http://wowhead.com/spell=17962"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
                />
                 
                Conflagrate
              </a>
               and 
              <a
                href="http://wowhead.com/spell=117828"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
                />
                 
                Backdraft
              </a>
               stacks. Use 
              <a
                href="http://wowhead.com/spell=80240"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_baneofhavoc.jpg"
                />
                 
                Havoc
              </a>
               whenever there's something else to cleave.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=348"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
                />
                 
                Immolate
              </a>
               uptime
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                99.25%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=17962"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
                />
                 
                Conflagrate
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                98.39%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Wasted 
              <a
                href="http://wowhead.com/spell=117828"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
                />
                 
                Backdraft
              </a>
               stacks per minute
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                1
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "green",
                }
              }
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M 5.701 23.894 C 4.24 22.837 2.199 23.163 1.141 24.624 C 0.083 26.085 0.411 28.126 1.871 29.184 C 6.96 32.869 11.124 38.618 14.539 46.197 C 15.688 48.746 19.3 48.767 20.478 46.231 C 27.135 31.905 36.787 18.058 48.359 8.153 C 49.728 6.98 49.888 4.919 48.715 3.548 C 47.543 2.178 45.481 2.018 44.111 3.191 C 33.372 12.385 24.283 24.61 17.478 37.569 C 14.203 31.848 10.328 27.245 5.701 23.894 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Don't cap your Soul Shard Fragments
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "transition": "background-color 800ms",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Soul Shards are your most important resource and since you are in control of their generation, it's very important to plan your rotation and not let them cap.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Wasted fragments per minute
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                <dfn
                  data-tip="You wasted 2 fragments."
                >
                   
                  1
                   
                   
                </dfn>
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "green",
                }
              }
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M 5.701 23.894 C 4.24 22.837 2.199 23.163 1.141 24.624 C 0.083 26.085 0.411 28.126 1.871 29.184 C 6.96 32.869 11.124 38.618 14.539 46.197 C 15.688 48.746 19.3 48.767 20.478 46.231 C 27.135 31.905 36.787 18.058 48.359 8.153 C 49.728 6.98 49.888 4.919 48.715 3.548 C 47.543 2.178 45.481 2.018 44.111 3.191 C 33.372 12.385 24.283 24.61 17.478 37.569 C 14.203 31.848 10.328 27.245 5.701 23.894 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Use your cooldowns and talents
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "transition": "background-color 800ms",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Be mindful of your talent choices and use them when it's appropriate. It's okay to hold on a cooldown for a little bit when the encounter requires it (burn phases or priority targets), but generally speaking you should use them as much as you can.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=152108"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/achievement_zone_cataclysm.jpg"
                />
                 
                Cataclysm
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                100.00%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=1122"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_summoninfernal.jpg"
                />
                 
                Summon Infernal
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                100.00%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=113858"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_soulburn.jpg"
                />
                 
                Dark Soul: Instability
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                100.00%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "red",
                }
              }
              viewBox="15 15 70 70"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style={
                  Object {
                    "strokeLinecap": "round",
                    "strokeMiterlimit": 10,
                    "strokeWidth": 10,
                  }
                }
              >
                <line
                  x1="21.19"
                  x2="78.81"
                  y1="21.19"
                  y2="78.81"
                />
                <line
                  x1="78.81"
                  x2="21.19"
                  y1="21.19"
                  y2="78.81"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Use your utility and defensive spells
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#ac1f39",
                  "transition": "background-color 800ms",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Use other spells in your toolkit to your advantage. For example, you can try to minimize necessary movement by using 
              <a
                href="http://wowhead.com/spell=111771"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
                />
                 
                Demonic Gateway
              </a>
              , 
              <a
                href="http://wowhead.com/spell=268358"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
                />
                 
                Demonic Circle
              </a>
              , 
              <a
                href="http://wowhead.com/spell=111400"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_deathwing_sealarmorbreachtga.jpg"
                />
                 
                Burning Rush
              </a>
               or mitigate incoming damage with 
              <a
                href="http://wowhead.com/spell=104773"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
                />
                 
                Unending Resolve
              </a>
              /
              <a
                href="http://wowhead.com/spell=108416"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/warlock_sacrificial_pact.jpg"
                />
                 
                Dark Pact
              </a>
              .
              <br />
              While you shouldn't cast these defensives on cooldown, be aware of them and use them whenever effective. Not using them at all indicates you might not be aware of them or not using them optimally.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=48020"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccircleteleport.jpg"
                />
                 
                Demonic Circle Teleport
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                0.00%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=104773"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
                />
                 
                Unending Resolve
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                0.00%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "green",
                }
              }
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M 5.701 23.894 C 4.24 22.837 2.199 23.163 1.141 24.624 C 0.083 26.085 0.411 28.126 1.871 29.184 C 6.96 32.869 11.124 38.618 14.539 46.197 C 15.688 48.746 19.3 48.767 20.478 46.231 C 27.135 31.905 36.787 18.058 48.359 8.153 C 49.728 6.98 49.888 4.919 48.715 3.548 C 47.543 2.178 45.481 2.018 44.111 3.191 C 33.372 12.385 24.283 24.61 17.478 37.569 C 14.203 31.848 10.328 27.245 5.701 23.894 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Always be casting
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "transition": "background-color 800ms",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              You should try to avoid doing nothing during the fight. When you have to move, try to save some 
              <a
                href="http://wowhead.com/spell=17962"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
                />
                 
                Conflagrate
              </a>
               charges or try to utilize 
              <a
                href="http://wowhead.com/spell=268358"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
                />
                 
                Teleport
              </a>
               or 
              <a
                href="http://wowhead.com/spell=111771"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
                />
                 
                Gateway
              </a>
               to reduce the movement even further.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Downtime
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                10.84%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "green",
                }
              }
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M 5.701 23.894 C 4.24 22.837 2.199 23.163 1.141 24.624 C 0.083 26.085 0.411 28.126 1.871 29.184 C 6.96 32.869 11.124 38.618 14.539 46.197 C 15.688 48.746 19.3 48.767 20.478 46.231 C 27.135 31.905 36.787 18.058 48.359 8.153 C 49.728 6.98 49.888 4.919 48.715 3.548 C 47.543 2.178 45.481 2.018 44.111 3.191 C 33.372 12.385 24.283 24.61 17.478 37.569 C 14.203 31.848 10.328 27.245 5.701 23.894 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "transition": "background-color 800ms",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              All items enchanted
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                3
                 
                / 3
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Using high quality enchants
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                3
                 
                / 3
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Used a pre-potion
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                Yes
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Used a second potion
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                Yes
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Flask used
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                Yes
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              High quality food used
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                Yes
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Food used
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                Yes
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
